<resources>
    <string name="app_name">My Shopping List</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First name</string>
    <string name="prompt_lastName">Last name (optional)</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_numberProduct">Number</string>
    <string name="prompt_isActive">Completed</string>
    <string name="prompt_nameProduct">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_remove">Remove</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_account">Create an account</string>
    <string name="action_action_register">Register</string>
    <string name="action_save">Save</string>
    <string name="prompt_nameList">List name</string>
    <string name="action_createList">Add list</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">This password is empty</string>
    <string name="error_empty_firstName">This first name is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Activity Titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_subscribe">New account</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_lists">Your Shopping Lists</string>
    <string name="title_activity_products">Your products List</string>
    <string name="title_activity_createList">Create list</string>
    <string name="title_activity_editList">Edit Shopping list</string>
    <string name="title_activity_createProduct">Create product</string>
    <string name="title_activity_editProduct">Edit product</string>
    <!-- Toast Messages -->
    <string name="toast_no_products">Empty shopping list</string>
    <string name="toast_no_lists">No shopping list yet</string>
    <string name="toast_edit_success">Edited with success</string>
    <string name="toast_edit_error">Error during edit</string>
    <string name="toast_create_success">Created</string>
    <string name="toast_create_error">Error during creation</string>
    <string name="toast_login">Logged in</string>
    <string name="toast_logout">Logging out</string>
    <!-- Menu -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_list">list</string>
</resources>
