<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.esgi.iw3.g26.shoppinglist.Activity.Product.EditProductActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/prompt_nameProduct"
                android:ems="10"
                android:id="@+id/editText" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/prompt_numberProduct"
                android:ems="10"
                android:id="@+id/editNumberProduct" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/prompt_price"
                android:ems="10"
                android:id="@+id/editPrice" />

            <Button
                android:id="@+id/list_saveProduct_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/list_deleteProduct_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_remove"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_light" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
