<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.esgi.iw3.g26.shoppinglist.Activity.ShoppingList.EditListActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/nameList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nameList"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:text="@string/prompt_isActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxIsActive"
                android:layout_weight="0.81"
                android:scaleX="1"
                android:scaleY="1"/>

            <Button
                android:id="@+id/create_list_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/list_deleteList_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_remove"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_light" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
